--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <section class="hero">
       <div class="hero-content">
-        <h1>Lessons and insights from <span>8 years</span></h1>
+        <h1>Lessons and insights <br><span>from 8 years</span></h1>
         <p>
           Where to grow your business as a photographer: site or social media?
         </p>
@@ -38,6 +38,9 @@
       </div>
       <div class="hero-image">
         <img src="src/hero-image.svg" alt="Hero Image" />
+      </div>
+      <div class="dots-image">
+        <img src="src/dots.svg" alt="dots Image">
       </div>
     </section>
 
@@ -55,31 +58,43 @@
     </section>
 
     <section class="community-management">
-      <h2>Manage your entire community in a single system</h2>
+      <h2>Manage your entire community <br>in a single system</h2>
       <p>Who is Nexcent suitable for?</p>
       <div class="community-options">
         <div class="option">
-          <img src="src/icon1.svg" alt="Icon 1" />
-          <h3>Membership Organisations</h3>
+          <div class="icon1">
+            <div class="image-wrapper">
+              <img src="src/rectangle.svg" alt="rect Image" class="background-image">
+              <img src="src/icon1.svg" alt="Icon 1" class="foreground-image">
+            </div>
+          </div>
+          <h3>Membership <br>Organisations</h3>
           <p>
-            Our membership management software provides full automation of
-            membership renewals and payments.
+            Our membership management software provides full automation of membership renewals and payments
           </p>
         </div>
         <div class="option">
-          <img src="src/icon2.svg" alt="Icon 2" />
-          <h3>National Associations</h3>
+          <div class="icon1">
+            <div class="image-wrapper">
+              <img src="src/rectangle.svg" alt="rect Image" class="background-image">
+              <img src="src/icon2.svg" alt="Icon 2" class="foreground-image">
+            </div>
+          </div>
+          <h3>National <br>Associations</h3>
           <p>
-            Our membership management software provides full automation of
-            membership renewals and payments.
+            Our membership management software provides full automation of membership renewals and payments
           </p>
         </div>
         <div class="option">
-          <img src="src/icon3.svg" alt="Icon 3" />
-          <h3>Clubs And Groups</h3>
+          <div class="icon1">
+            <div class="image-wrapper">
+              <img src="src/rectangle.svg" alt="rect Image" class="background-image">
+              <img src="src/icon3.svg" alt="Icon 3" class="foreground-image">
+            </div>
+          </div>
+          <h3>Clubs And <br>Groups</h3>
           <p>
-            Our membership management software provides full automation of
-            membership renewals and payments.
+            Our membership management software provides full automation of membership renewals and payments
           </p>
         </div>
       </div>
@@ -92,10 +107,10 @@
       <div class="article-content">
         <h3>The unseen of spending three years at Pixelgrade</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet
-          justo ipsum. Sed accumsan quam vitae est varius fringilla.
-          Pellentesque placerat vestibulum lorem sed porta. Nullam mattis
-          tristique iaculis.
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet justo ipsum. 
+          Sed accumsan quam vitae est varius fringilla. Pellentesque placerat vestibulum lorem sed porta. 
+          Nullam mattis tristique iaculis. Nullam pulvinar sit amet risus pretium auctor. Etiam quis massa pulvinar, aliquam quam vitae, tempus sem. 
+          Donec elementum pulvinar odio.
         </p>
         <button class="learn-more">Learn More</button>
       </div>
@@ -103,39 +118,43 @@
 
     <section class="statistics">
       <div class="statistics-header">
-        <h2>Helping a local <span>business reinvent itself</span></h2>
+        <h2>Helping a local <br> <span>business reinvent itself</span></h2>
         <p>We reached here with our hard work and dedication</p>
       </div>
       <div class="statistics-numbers">
-        <div class="stat-item">
-          <img src="src/members-icon.svg" alt="Members Icon" />
-          <div>
-            <h3>2,245,341</h3>
-            <p>Members</p>
+        <div class="row">
+          <div class="stat-item">
+            <img src="src/members-icon.svg" alt="Members Icon" />
+            <div>
+              <h3>2,245,341</h3>
+              <p>Members</p>
+            </div>
+          </div>
+          <div class="stat-item">
+            <img src="src/event-bookings-icon.svg" alt="Event Bookings Icon" />
+            <div>
+              <h3>828,867</h3>
+              <p>Event Bookings</p>
+            </div>
           </div>
         </div>
-        <div class="stat-item">
-          <img src="src/clubs-icon.svg" alt="Clubs Icon" />
-          <div>
-            <h3>46,328</h3>
-            <p>Clubs</p>
+        <div class="row">
+          <div class="stat-item">
+            <img src="src/clubs-icon.png" alt="Clubs Icon" />
+            <div>
+              <h3>46,328</h3>
+              <p>Clubs</p>
+            </div>
+          </div>
+          <div class="stat-item">
+            <img src="src/payments-icon.svg" alt="Payments Icon" />
+            <div>
+              <h3>1,926,436</h3>
+              <p>Payments</p>
+            </div>
           </div>
         </div>
-        <div class="stat-item">
-          <img src="src/event-bookings-icon.svg" alt="Event Bookings Icon" />
-          <div>
-            <h3>828,867</h3>
-            <p>Event Bookings</p>
-          </div>
-        </div>
-        <div class="stat-item">
-          <img src="src/payments-icon.svg" alt="Payments Icon" />
-          <div>
-            <h3>1,926,436</h3>
-            <p>Payments</p>
-          </div>
-        </div>
-      </div>
+        
     </section>
 
     <section class="footer-design">
