--- a/index.html
+++ b/index.html
@@ -146,10 +146,12 @@
         <div class="footer-design-text">
           <h3>How to design your site footer like we did</h3>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam tempor,
-            augue nec tincidunt molestie, massa nunc varius arcu, sit amet
-            scelerisque est erat a magna. Donec eget erat sit amet libero
-            ultrices mollis.
+            Donec a eros justo. Fusce egestas tristique ultrices.
+             Nam tempor, augue nec tincidunt molestie, massa nunc varius arcu, at scelerisque elit erat a magna.
+              Donec quis erat at libero ultrices mollis. In hac habitasse platea dictumst. 
+              Vivamus vehicula leo dui, at porta nisi facilisis finibus. In euismod augue vitae nisi ultricies, non aliquet urna tincidunt. 
+              Integer in nisi eget nulla commodo faucibus efficitur quis massa. Praesent felis est, finibus et nisi ac, hendrerit venenatis libero. 
+              Donec consectetur faucibus ipsum id gravida.
           </p>
           <button class="learn-more">Learn More</button>
         </div>
@@ -157,59 +159,66 @@
     </section>
 
     <section class="testimonial">
-      <div class="testimonial-content">
-        <div class="testimonial-image">
-          <img src="src/testimonial-image.png" alt="Testimonial Image" />
-        </div>
+      <img class="testimonial-image" src="src/testimonial-image.png" alt="Testimonial Image" />
+        <div class="testimonial-content">
         <div class="testimonial-text">
           <p>
-            Maecenas dignissim justo eget nulla rutrum molestie. Maecenas
-            lobortis sem dui, vel rutrum risus tincidunt ullamcorper. Proin eu
-            enim metus. Vivamus sed libero ornare, tristique magna, gravida
-            enim. Nullam ut molestie arcu, sit amet hendrerit velit.
+            Maecenas dignissim justo eget nulla rutrum molestie. 
+            Maecenas lobortis sem dui, vel rutrum risus tincidunt ullamcorper.
+            Proin eu enim metus. Vivamus sed libero ornare, tristique quam in, gravida enim. 
+            Nullam ut molestie arcu, at hendrerit elit. Morbi laoreet elit at ligula molestie, 
+            nec molestie mi blandit. Suspendisse cursus tellus sed augue ultrices, 
+            quis tristique nulla sodales. Suspendisse eget lorem eu turpis vestibulum pretium. 
+            Suspendisse potenti. Quisque malesuada enim sapien, vitae placerat ante feugiat eget. 
+            Quisque vulputate odio neque, eget efficitur libero condimentum id. 
+            Curabitur id nibh id sem dignissim finibus ac sit amet magna.
           </p>
           <h4>Tim Smith</h4>
           <p class="position">British Dragon Boat Racing Association</p>
         </div>
+        <div class="testimonial-customers">
+          <div class="customer-logos">
+            <img src="src/client1.svg" alt="Client 1" />
+            <img src="src/client2.svg" alt="Client 2" />
+            <img src="src/client3.svg" alt="Client 3" />
+            <img src="src/client4.svg" alt="Client 4" />
+            <img src="src/client5.svg" alt="Client 5" />
+            <img src="src/client6.svg" alt="Client 6" />
+          </div>
+          <div class="meet-all-customers">
+            <a href="#">Meet all customers →</a>
+          </div>
+        </div>
+      </section>
       </div>
-      <div class="client-logos">
-        <img src="src/client1.svg" alt="Client 1" />
-        <img src="src/client2.svg" alt="Client 2" />
-        <img src="src/client3.svg" alt="Client 3" />
-        <img src="src/client4.svg" alt="Client 4" />
-        <img src="src/client5.svg" alt="Client 5" />
-        <img src="src/client6.svg" alt="Client 6" />
-      </div>
-      <div class="meet-all-customers">
-        <a href="#">Meet all customers →</a>
-      </div>
-    </section>
-
     <section class="additional-content">
       <h2>Caring is the new marketing</h2>
       <p>
-        The Nexcent blog is the best place to read about the latest membership
-        insights, trends, and more. See who’s joining the community, read about
-        how our community is increasing their membership income and lots more.
+        The Nexcent blog is the best place to read about the latest membership insights, 
+        trends and more. See who's joining the community, read about how our community 
+        are increasing their membership income and lot's more.​
       </p>
       <div class="articles">
         <div class="article">
           <img src="src/article1.png" alt="Article 1" />
-          <h3>Creating Streamlined Safeguarding Processes with OneRen</h3>
-          <a href="#" class="readmore">Readmore →</a>
+          <div class="article-description">
+            <h3>Creating Streamlined Safeguarding Processes with OneRen</h3>
+            <a href="#" class="readmore">Readmore →</a>
+          </div>
         </div>
         <div class="article">
           <img src="src/article2.png" alt="Article 2" />
-          <h3>
-            What are your safeguarding responsibilities and how can you manage
-            them?
-          </h3>
-          <a href="#" class="readmore">Readmore →</a>
+          <div class="article-description">
+            <h3>What are your safeguarding responsibilities and how can you manage them?</h3>
+            <a href="#" class="readmore">Readmore →</a>
+          </div>
         </div>
         <div class="article">
           <img src="src/article3.png" alt="Article 3" />
-          <h3>Revamping the Membership Model with Triathlon Australia</h3>
-          <a href="#" class="readmore">Readmore →</a>
+          <div class="article-description">
+            <h3>Revamping the Membership Model with Triathlon Australia</h3>
+            <a href="#" class="readmore">Readmore →</a>
+          </div>
         </div>
       </div>
     </section>
@@ -221,8 +230,20 @@
 
     <footer>
       <div class="footer-content">
-        <div class="footer-logo">
-          <img src="src/footer-logo.svg" alt="Nexcent Logo" />
+        <div class="footer-info">
+          <div class="footer-logo">
+            <img src="src/footer-logo.svg" alt="Nexcent Logo" />
+          </div>
+          <div class="footer-bottom">
+            <p>Coptyright &copy; 2020 Nexcent Itd.</p>
+            <p>All rights reserved.</p>
+            <div class="social-icons">
+              <a href="#"><img src="src/icon-instagram.svg" alt="Instagram" /></a>
+              <a href="#"><img src="src/icon-baseball.svg" alt="Baseball" /></a>
+              <a href="#"><img src="src/icon-twitter.svg" alt="Twitter" /></a>
+              <a href="#"><img src="src/icon-youtube.svg" alt="Youtube" /></a>
+            </div>
+          </div>
         </div>
         <div class="footer-columns">
           <div class="footer-column">
@@ -248,19 +269,14 @@
           <div class="footer-column">
             <h3>Stay up to date</h3>
             <form>
-              <input type="email" placeholder="Your email address" />
-              <button type="submit">Subscribe</button>
+              <div class="input-container">
+                <input type="email" placeholder="Your email address" />
+                <button type="submit">
+                  <img src="src/send-icon.svg" alt="Send Icon">
+                </button>
+              </div>
             </form>
           </div>
-        </div>
-      </div>
-      <div class="footer-bottom">
-        <p>&copy; 2023 Nexcent. All rights reserved.</p>
-        <div class="social-icons">
-          <a href="#"><img src="src/icon-instagram.svg" alt="Instagram" /></a>
-          <a href="#"><img src="src/icon-baseball.svg" alt="Baseball" /></a>
-          <a href="#"><img src="src/icon-twitter.svg" alt="Twitter" /></a>
-          <a href="#"><img src="src/icon-youtube.svg" alt="Youtube" /></a>
         </div>
       </div>
     </footer>
