--- a/index.html
+++ b/index.html
@@ -29,15 +29,17 @@
     </header>
 
     <section class="hero">
-      <div class="hero-content">
-        <h1>Lessons and insights <br><span>from 8 years</span></h1>
-        <p>
-          Where to grow your business as a photographer: site or social media?
-        </p>
-        <button class="register">Register</button>
-      </div>
-      <div class="hero-image">
-        <img src="src/hero-image.svg" alt="Hero Image" />
+      <div class="hero-card">
+        <div class="hero-content">
+          <h1>Lessons and insights <br><span>from 8 years</span></h1>
+          <p>
+            Where to grow your business as a photographer: site or social media?
+          </p>
+          <button class="register">Register</button>
+        </div>
+        <div class="hero-image">
+          <img src="src/hero-image.svg" alt="Hero Image" />
+        </div>
       </div>
       <div class="dots-image">
         <img src="src/dots.svg" alt="dots Image">
