--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <nav>
         <div class="logo">
-          <img src="src/logo.svg"/>
+          <img src="src/logo.svg" alt="Nexcent Logo"/> <!-- Add alt text for accessibility -->
         </div>
         <ul class="nav-links">
           <li><a href="#">Home</a></li>
@@ -32,17 +32,15 @@
       <div class="hero-card">
         <div class="hero-content">
           <h1>Lessons and insights <br><span>from 8 years</span></h1>
-          <p>
-            Where to grow your business as a photographer: site or social media?
-          </p>
+          <p>Where to grow your business as a photographer: site or social media?</p>
           <button class="register">Register</button>
         </div>
         <div class="hero-image">
-          <img src="src/hero-image.svg" alt="Hero Image" />
+          <img src="src/hero-image.svg" alt="Hero Image" /> <!-- Add alt text for accessibility -->
         </div>
       </div>
       <div class="dots-image">
-        <img src="src/dots.svg" alt="dots Image">
+        <img src="src/dots.svg" alt="Dots Image"> <!-- Add alt text for accessibility -->
       </div>
     </section>
 
@@ -50,12 +48,12 @@
       <h2>Our Clients</h2>
       <p>We have been working with some Fortune 500+ clients</p>
       <div class="client-logos">
-        <img src="src/client1.svg" alt="Client 1" />
-        <img src="src/client2.svg" alt="Client 2" />
-        <img src="src/client3.svg" alt="Client 3" />
-        <img src="src/client4.svg" alt="Client 4" />
-        <img src="src/client5.svg" alt="Client 5" />
-        <img src="src/client6.svg" alt="Client 6" />
+        <img src="src/client1.svg" alt="Client 1 Logo" /> <!-- Add alt text for accessibility -->
+        <img src="src/client2.svg" alt="Client 2 Logo" /> <!-- Add alt text for accessibility -->
+        <img src="src/client3.svg" alt="Client 3 Logo" /> <!-- Add alt text for accessibility -->
+        <img src="src/client4.svg" alt="Client 4 Logo" /> <!-- Add alt text for accessibility -->
+        <img src="src/client5.svg" alt="Client 5 Logo" /> <!-- Add alt text for accessibility -->
+        <img src="src/client6.svg" alt="Client 6 Logo" /> <!-- Add alt text for accessibility -->
       </div>
     </section>
 
@@ -66,54 +64,43 @@
         <div class="option">
           <div class="icon1">
             <div class="image-wrapper">
-              <img src="src/rectangle.svg" alt="rect Image" class="background-image">
-              <img src="src/icon1.svg" alt="Icon 1" class="foreground-image">
+              <img src="src/rectangle.svg" alt="Rectangle Background" class="background-image"> <!-- Add alt text for accessibility -->
+              <img src="src/icon1.svg" alt="Membership Icon" class="foreground-image"> <!-- Add alt text for accessibility -->
             </div>
           </div>
           <h3>Membership <br>Organisations</h3>
-          <p>
-            Our membership management software provides full automation of membership renewals and payments
-          </p>
+          <p>Our membership management software provides full automation of membership renewals and payments</p>
         </div>
         <div class="option">
           <div class="icon1">
             <div class="image-wrapper">
-              <img src="src/rectangle.svg" alt="rect Image" class="background-image">
-              <img src="src/icon2.svg" alt="Icon 2" class="foreground-image">
+              <img src="src/rectangle.svg" alt="Rectangle Background" class="background-image"> <!-- Add alt text for accessibility -->
+              <img src="src/icon2.svg" alt="Associations Icon" class="foreground-image"> <!-- Add alt text for accessibility -->
             </div>
           </div>
           <h3>National <br>Associations</h3>
-          <p>
-            Our membership management software provides full automation of membership renewals and payments
-          </p>
+          <p>Our membership management software provides full automation of membership renewals and payments</p>
         </div>
         <div class="option">
           <div class="icon1">
             <div class="image-wrapper">
-              <img src="src/rectangle.svg" alt="rect Image" class="background-image">
-              <img src="src/icon3.svg" alt="Icon 3" class="foreground-image">
+              <img src="src/rectangle.svg" alt="Rectangle Background" class="background-image"> <!-- Add alt text for accessibility -->
+              <img src="src/icon3.svg" alt="Clubs Icon" class="foreground-image"> <!-- Add alt text for accessibility -->
             </div>
           </div>
           <h3>Clubs And <br>Groups</h3>
-          <p>
-            Our membership management software provides full automation of membership renewals and payments
-          </p>
+          <p>Our membership management software provides full automation of membership renewals and payments</p>
         </div>
       </div>
     </section>
 
     <section class="featured-article">
       <div class="article-image">
-        <img src="src/article-image.svg" alt="Article Image" />
+        <img src="src/article-image.svg" alt="Article Image" /> <!-- Add alt text for accessibility -->
       </div>
       <div class="article-content">
         <h3>The unseen of spending three years at Pixelgrade</h3>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet justo ipsum. 
-          Sed accumsan quam vitae est varius fringilla. Pellentesque placerat vestibulum lorem sed porta. 
-          Nullam mattis tristique iaculis. Nullam pulvinar sit amet risus pretium auctor. Etiam quis massa pulvinar, aliquam quam vitae, tempus sem. 
-          Donec elementum pulvinar odio.
-        </p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet justo ipsum. Sed accumsan quam vitae est varius fringilla. Pellentesque placerat vestibulum lorem sed porta. Nullam mattis tristique iaculis. Nullam pulvinar sit amet risus pretium auctor. Etiam quis massa pulvinar, aliquam quam vitae, tempus sem. Donec elementum pulvinar odio.</p>
         <button class="learn-more">Learn More</button>
       </div>
     </section>
@@ -126,14 +113,14 @@
       <div class="statistics-numbers">
         <div class="column1">
           <div class="stat-item">
-            <img src="src/members-icon.png" alt="Members Icon" />
+            <img src="src/members-icon.png" alt="Members Icon" /> <!-- Add alt text for accessibility -->
             <div>
               <h3>2,245,341</h3>
               <p>Members</p>
             </div>
           </div>
           <div class="stat-item">
-            <img src="src/event-bookings-icon.svg" alt="Event Bookings Icon" />
+            <img src="src/event-bookings-icon.svg" alt="Event Bookings Icon" /> <!-- Add alt text for accessibility -->
             <div>
               <h3>828,867</h3>
               <p>Event Bookings</p>
@@ -142,100 +129,80 @@
         </div>
         <div class="column1">
           <div class="stat-item">
-            <img src="src/clubs-icon.png" alt="Clubs Icon" />
+            <img src="src/clubs-icon.png" alt="Clubs Icon" /> <!-- Add alt text for accessibility -->
             <div>
               <h3>46,328</h3>
               <p>Clubs</p>
             </div>
           </div>
           <div class="stat-item">
-            <img src="src/payments-icon.svg" alt="Payments Icon" />
+            <img src="src/payments-icon.svg" alt="Payments Icon" /> <!-- Add alt text for accessibility -->
             <div>
               <h3>1,926,436</h3>
               <p>Payments</p>
             </div>
           </div>
         </div>
-        
+      </div>
     </section>
 
     <section class="footer-design">
       <div class="footer-design-content">
         <div class="footer-design-image">
-          <img src="src/footer-design.svg" alt="Footer Design Image" />
+          <img src="src/footer-design.svg" alt="Footer Design Image" /> <!-- Add alt text for accessibility -->
         </div>
         <div class="footer-design-text">
           <h3>How to design your site footer like we did</h3>
-          <p>
-            Donec a eros justo. Fusce egestas tristique ultrices.
-             Nam tempor, augue nec tincidunt molestie, massa nunc varius arcu, at scelerisque elit erat a magna.
-              Donec quis erat at libero ultrices mollis. In hac habitasse platea dictumst. 
-              Vivamus vehicula leo dui, at porta nisi facilisis finibus. In euismod augue vitae nisi ultricies, non aliquet urna tincidunt. 
-              Integer in nisi eget nulla commodo faucibus efficitur quis massa. Praesent felis est, finibus et nisi ac, hendrerit venenatis libero. 
-              Donec consectetur faucibus ipsum id gravida.
-          </p>
+          <p>Donec a eros justo. Fusce egestas tristique ultrices. Nam tempor, augue nec tincidunt molestie, massa nunc varius arcu, at scelerisque elit erat a magna. Donec quis erat at libero ultrices mollis. In hac habitasse platea dictumst. Vivamus vehicula leo dui, at porta nisi facilisis finibus. In euismod augue vitae nisi ultricies, non aliquet urna tincidunt. Integer in nisi eget nulla commodo faucibus efficitur quis massa. Praesent felis est, finibus et nisi ac, hendrerit venenatis libero. Donec consectetur faucibus ipsum id gravida.</p>
           <button class="learn-more">Learn More</button>
         </div>
       </div>
     </section>
 
     <section class="testimonial">
-      <img class="testimonial-image" src="src/testimonial-image.png" alt="Testimonial Image" />
-        <div class="testimonial-content">
+      <img class="testimonial-image" src="src/testimonial-image.png" alt="Testimonial Image" /> <!-- Add alt text for accessibility -->
+      <div class="testimonial-content">
         <div class="testimonial-text">
-          <p>
-            Maecenas dignissim justo eget nulla rutrum molestie. 
-            Maecenas lobortis sem dui, vel rutrum risus tincidunt ullamcorper.
-            Proin eu enim metus. Vivamus sed libero ornare, tristique quam in, gravida enim. 
-            Nullam ut molestie arcu, at hendrerit elit. Morbi laoreet elit at ligula molestie, 
-            nec molestie mi blandit. Suspendisse cursus tellus sed augue ultrices, 
-            quis tristique nulla sodales. Suspendisse eget lorem eu turpis vestibulum pretium. 
-            Suspendisse potenti. Quisque malesuada enim sapien, vitae placerat ante feugiat eget. 
-            Quisque vulputate odio neque, eget efficitur libero condimentum id. 
-            Curabitur id nibh id sem dignissim finibus ac sit amet magna.
-          </p>
+          <p>Maecenas dignissim justo eget nulla rutrum molestie. Maecenas lobortis sem dui, vel rutrum risus tincidunt ullamcorper. Proin eu enim metus. Vivamus sed libero ornare, tristique quam in, gravida enim. Nullam ut molestie arcu, at hendrerit elit. Morbi laoreet elit at ligula molestie, nec molestie mi blandit. Suspendisse cursus tellus sed augue ultrices, quis tristique nulla sodales. Suspendisse eget lorem eu turpis vestibulum pretium. Suspendisse potenti. Quisque malesuada enim sapien, vitae placerat ante feugiat eget. Quisque vulputate odio neque, eget efficitur libero condimentum id. Curabitur id nibh id sem dignissim finibus ac sit amet magna.</p>
           <h4>Tim Smith</h4>
           <p class="position">British Dragon Boat Racing Association</p>
         </div>
         <div class="testimonial-customers">
           <div class="customer-logos">
-            <img src="src/client1.svg" alt="Client 1" />
-            <img src="src/client2.svg" alt="Client 2" />
-            <img src="src/client3.svg" alt="Client 3" />
-            <img src="src/client4.svg" alt="Client 4" />
-            <img src="src/client5.svg" alt="Client 5" />
-            <img src="src/client6.svg" alt="Client 6" />
+            <img src="src/client1.svg" alt="Client 1 Logo" /> <!-- Add alt text for accessibility -->
+            <img src="src/client2.svg" alt="Client 2 Logo" /> <!-- Add alt text for accessibility -->
+            <img src="src/client3.svg" alt="Client 3 Logo" /> <!-- Add alt text for accessibility -->
+            <img src="src/client4.svg" alt="Client 4 Logo" /> <!-- Add alt text for accessibility -->
+            <img src="src/client5.svg" alt="Client 5 Logo" /> <!-- Add alt text for accessibility -->
+            <img src="src/client6.svg" alt="Client 6 Logo" /> <!-- Add alt text for accessibility -->
           </div>
           <div class="meet-all-customers">
             <a href="#">Meet all customers →</a>
           </div>
         </div>
-      </section>
       </div>
+    </section>
+
     <section class="additional-content">
       <h2>Caring is the new marketing</h2>
-      <p>
-        The Nexcent blog is the best place to read about the latest membership insights, 
-        trends and more. See who's joining the community, read about how our community 
-        are increasing their membership income and lot's more.​
-      </p>
+      <p>The Nexcent blog is the best place to read about the latest membership insights, trends and more. See who's joining the community, read about how our community are increasing their membership income and lot's more.​</p>
       <div class="articles">
         <div class="article">
-          <img src="src/article1.png" alt="Article 1" />
+          <img src="src/article1.png" alt="Article 1" /> <!-- Add alt text for accessibility -->
           <div class="article-description">
             <h3>Creating Streamlined Safeguarding Processes with OneRen</h3>
             <a href="#" class="readmore">Readmore →</a>
           </div>
         </div>
         <div class="article">
-          <img src="src/article2.png" alt="Article 2" />
+          <img src="src/article2.png" alt="Article 2" /> <!-- Add alt text for accessibility -->
           <div class="article-description">
             <h3>What are your safeguarding responsibilities and how can you manage them?</h3>
             <a href="#" class="readmore">Readmore →</a>
           </div>
         </div>
         <div class="article">
-          <img src="src/article3.png" alt="Article 3" />
+          <img src="src/article3.png" alt="Article 3" /> <!-- Add alt text for accessibility -->
           <div class="article-description">
             <h3>Revamping the Membership Model with Triathlon Australia</h3>
             <a href="#" class="readmore">Readmore →</a>
@@ -253,16 +220,16 @@
       <div class="footer-content">
         <div class="footer-info">
           <div class="footer-logo">
-            <img src="src/footer-logo.svg" alt="Nexcent Logo" />
+            <img src="src/footer-logo.svg" alt="Nexcent Logo" /> <!-- Add alt text for accessibility -->
           </div>
           <div class="footer-bottom">
-            <p>Coptyright &copy; 2020 Nexcent Itd.</p>
+            <p>Copyright &copy; 2020 Nexcent Ltd.</p> <!-- Corrected typo: "Coptyright" to "Copyright" -->
             <p>All rights reserved.</p>
             <div class="social-icons">
-              <a href="#"><img src="src/icon-instagram.svg" alt="Instagram" /></a>
-              <a href="#"><img src="src/icon-baseball.svg" alt="Baseball" /></a>
-              <a href="#"><img src="src/icon-twitter.svg" alt="Twitter" /></a>
-              <a href="#"><img src="src/icon-youtube.svg" alt="Youtube" /></a>
+              <a href="#"><img src="src/icon-instagram.svg" alt="Instagram" /> <!-- Add alt text for accessibility --></a>
+              <a href="#"><img src="src/icon-baseball.svg" alt="Baseball" /> <!-- Add alt text for accessibility --></a>
+              <a href="#"><img src="src/icon-twitter.svg" alt="Twitter" /> <!-- Add alt text for accessibility --></a>
+              <a href="#"><img src="src/icon-youtube.svg" alt="YouTube" /> <!-- Add alt text for accessibility --></a>
             </div>
           </div>
         </div>
@@ -293,7 +260,7 @@
               <div class="input-container">
                 <input type="email" placeholder="Your email address" />
                 <button type="submit">
-                  <img src="src/send-icon.svg" alt="Send Icon">
+                  <img src="src/send-icon.svg" alt="Send Icon"> <!-- Add alt text for accessibility -->
                 </button>
               </div>
             </form>
